Build #46: one write verb, and the cursor carries its lineage
Collapses the write surface to `POST /api/task-patches`, makes the stream
resumable on `Last-Event-ID`, and gives the API the error contract it never had.

- `POST /api/tasks` and `CreateTaskDto` are deleted. The first patch for a task
  id creates it; a creating patch is the one carrying `creationDateTime`, which
  is the discriminator that makes both the `400` (incomplete create) and the
  `404` (orphan) reachable without a flag on the wire.
- `?since=<timestamp>` becomes `?since=<sequence>`, presented with its `epoch`.
- The SSE event id is `epoch:sequence`, not a bare sequence: the reconnect the
  browser performs by itself sends nothing but `Last-Event-ID`, so an epoch it
  cannot carry is an epoch that is never checked. Three cases resync.
- Heartbeats carry no id; the stream emits the DTO; the server bounds the
  connection to 20 minutes and closes cleanly.
- `GET /api/tasks` returns the snapshot under the watermark it was read at, read
  before the tasks so the worst case is an overlap rather than a gap.
- A patch is announced only after it has committed, and an optimistic-lock
  failure is retried outside the transaction.
- New: `sync_epoch` (V5), `TaskApiExceptionHandler`, `SyncCursor`.

Amends ADR-0004 three times. Resolves HEALTH-03's read half and HEALTH-05 —
whose own report was half wrong: the exceptions did carry `@ResponseStatus`.

Found on the way: `TaskMother` stamped sequences *above* the real one, so mother
data held the highest sequence in the shared test database and every stream test
resumed from a cursor years past the end of history. Negative now, and written
into docs/quality-bar.md.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>